Remove outline from prompt input

--- a/client/webcli.html
+++ b/client/webcli.html
@@ -51,6 +51,7 @@
             border: none;
             margin-top: -1px;
             margin-left: 1px;
+            outline: none;
         }
 
         .command {
